# learningpython.org_27W4

./: README.rst  pyproject.toml  requirements.txt
advanced-concepts/: closures.py  code-introspection.py  decorators.py  exception_handling.py  filter.py  generators_iterators.py  lambdafunc.py  list_comprehensions.py  map-reduce-filter-exer.py  map.py  multiplefunc.py  partial-functions.py  reduce.py  regex.py  serialization.py  sets.py
learningpython_org/: app.py  basicstroper.py  classobj.py  conditions.py  dictionaries.py  draw.py  functions.py  helloworld.py  lists.py  listsarr.py  liststest.py  loops.py  moduleandpackages.py  numpy_array.py  pandasp.py  stringexercise.py  stringformat.py
learningpython_org/csv/: cars.csv
tests/: test_learningpython_org.py
