[tool.poetry]
name = "learningpython.org"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^4.0.1"
black = "^22.6.0"
Django = "^4.0.6"
dynaconf = "^3.1.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
